# TotumTelecom

./: .gitignore  CMakeLists.txt  README.md  Style.qss  SyNet.qss  main.cpp  resources.qrc
Totum/: TotumTelecom  totum_data.db
Totum/lib/: libQt6Charts.so.6  libQt6DBus.so.6  libQt6OpenGL.so.6  libQt6OpenGLWidgets.so.6  libQt6Sql.so.6  libQt6XcbQpa.so.6  libb2.so.1  libgomp.so.1  libpcre2-16.so.0
build-linux/: AppRun  default.desktop
build-linux/.cmake/api/v1/reply/: index-2026-04-13T09-31-53-0057.json
build-linux/lib/: libQt6Svg.so.6
build-win/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-win/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-win/TotumTelecom_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-win/TotumTelecom_autogen/EWIEGA46WW/: qrc_resources.cpp
build-win/TotumTelecom_autogen/UYX5XTB5RZ/: moc_logindialog.cpp  moc_logindialog.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-win/TotumTelecom_autogen/include/: ui_logindialog.h  ui_mainwindow.h
database/: dbmanager.cpp  dbmanager.h
ui/: logindialog.cpp  logindialog.h  logindialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
widgets/: dashboard.cpp  reports.cpp
